# kawaiiapi-py

./: .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  README.md  examples.py  pyproject.toml  setup.py
.github/workflows/: ci.yaml
kawaiiapi/: __init__.py  client.py  exceptions.py  kawaiiapi.py
